Typo, and removed 'IP' from name

--- a/views/aliases/edit.jade
+++ b/views/aliases/edit.jade
@@ -17,7 +17,7 @@ block page-body
 
 		div.portlet-body
 
-			form(action = '/ip-aliases/edit/' + device._id, method = 'post')
+			form(action = '/aliases/edit/' + device._id, method = 'post')
 
 				div.row
 
