--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -13,9 +13,9 @@ div.portlet
 				i.fa.fa-fw.fa-server
 				span Devices
 
-			li: a(href='/ip-aliases', class=(_.activePage == 'ip-aliases' ? 'active' : ''))
+			li: a(href='/aliases', class=(_.activePage == 'aliases' ? 'active' : ''))
 				i.fa.fa-fw.fa-sitemap
-				span IP Aliases
+				span Aliases
 
 			li: a(href='/devices', class=(_.activePage == 'bash-shortcuts' ? 'active' : ''))
 				i.fa.fa-fw.fa-terminal
