--- a/views/aliases/index.jade
+++ b/views/aliases/index.jade
@@ -1,5 +1,4 @@
 extends ../_shared/page-layout
-include ../_mixins/plugins
 include ../_mixins/forms
 
 mixin device(d)
@@ -9,11 +8,11 @@ mixin device(d)
 		p.name
 			= d.hostname
 			br
-			span #{d.outBoundIpAliases} out-bound IP alias#{d.outBoundIpAliases == 1 ? '' : 'es'}
+			span #{d.outBoundAliases} out-bound alias#{d.outBoundAliases == 1 ? '' : 'es'}
 			br
-			span #{d.inBoundIpAliases} out-bound IP alias#{d.inBoundIpAliases == 1 ? '' : 'es'}
+			span #{d.inBoundAliases} in-bound alias#{d.inBoundAliases == 1 ? '' : 'es'}
 			p.buttons.btn-group
-			+form_buttonLink('Manage Aliases', 'edit', '/ip-aliases/edit/' + d._id, {
+			+form_buttonLink('Manage Aliases', 'edit', '/aliases/edit/' + d._id, {
 				'class': 'btn-warning'
 			})
 
