Clever select all

--- a/views/aliases/edit.jade
+++ b/views/aliases/edit.jade
@@ -23,6 +23,9 @@ block page-body
 
 					div.col-md-6
 						h2 Out-Bound Aliases
+
+						p: a.select-all-checkboxes(href = 'javascript:;' data-target = 'input[name^=out_]') Select/Deselect All
+
 						for d in devices
 							if (d._id.toString() != device._id.toString())
 								+form_fieldset
@@ -30,6 +33,9 @@ block page-body
 
 					div.col-md-6
 						h2 In-Bound Aliases
+
+						p: a.select-all-checkboxes(href = 'javascript:;' data-target = 'input[name^=in_]') Select/Deselect All
+
 						for d in devices
 							if (d._id.toString() != device._id.toString())
 								+form_fieldset
