Bash shortcuts list sample

--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -17,6 +17,6 @@ div.portlet
 				i.fa.fa-fw.fa-sitemap
 				span Aliases
 
-			li: a(href='/devices', class=(_.activePage == 'bash-shortcuts' ? 'active' : ''))
+			li: a(href='/bash-shortcuts', class=(_.activePage == 'bash-shortcuts' ? 'active' : ''))
 				i.fa.fa-fw.fa-terminal
 				span Bash Shortcuts
