--- a/assets/_shared/css/global.scss
+++ b/assets/_shared/css/global.scss
@@ -2,7 +2,7 @@
 
 // fonts
 
-h1, h2, h3, h4, h5, h6, p, li, input, label, span {
+h1, h2, h3, h4, h5, h6, p, li, input, textarea, label, span {
 	font-family: $fontFamily, sans-serif !important;
 	font-weight: lighter;
 	color: $textColour;
