--- a/assets/_shared/css/page-layout.scss
+++ b/assets/_shared/css/page-layout.scss
@@ -24,4 +24,12 @@
 	p, li, label {
 		font-size: 1.25em;
 	}
+
+	input, textarea {
+		font-size: 1.1em;
+	}
+
+	label.btn {
+		font-size: 1em;
+	}
 }
