--- a/views/bash-shortcuts/edit.jade
+++ b/views/bash-shortcuts/edit.jade
@@ -22,7 +22,7 @@ block page-body
 					shortcut.short_command,
 					{
 						'data-validation': 'required alphanumeric',
-						'data-validation-allowing': '_-'
+						'data-validation-allowing': '._-'
 					}
 					)
 
