--- a/views/_mixins/forms.jade
+++ b/views/_mixins/forms.jade
@@ -16,7 +16,7 @@ mixin form_longTextInput(field, value, attrs)
 mixin form_switchCheckBox(field, title, attrs)
 	- attrs = attrs || {}
 	label(for = field, class = 'switch-checkbox')
-		input(type = 'checkbox', id = field, name = field, value = '1')&attributes(attrs)
+		input(type = 'checkbox', id = field, name = field, value = attrs['value'] || '1')&attributes(attrs)
 		i.fa.fa-fw.fa-check.text-success(style = 'display: none;')
 		| &nbsp;&nbsp;
 		span!= title
