--- a/views/devices/edit.jade
+++ b/views/devices/edit.jade
@@ -21,49 +21,32 @@ block page-body
 
 				+form_fieldset
 					+form_label('hostname', 'Hostname')
-					+form_textInput(
-					'hostname',
-					device.hostname,
-					{
+					+form_textInput('hostname', device.hostname, {
 						'data-validation': 'required alphanumeric',
 						'data-validation-allowing': '_-'
-					}
-					)
+					})
 
 				+form_fieldset
 					+form_label('ip_address', 'IP Address')
-					+form_textInput(
-					'ip_address',
-					device.ip_address,
-					{
+					+form_textInput('ip_address', device.ip_address, {
 						'data-validation': 'custom',
 						'data-validation-regexp': '^([0-9]{1,3})\.([0-9]{1,3})\.([0-9]{1,3})\.([0-9]{1,3})$'
 					})
 
 				+form_fieldset
 					+form_label('type', 'Type')
-					+form_buttonGroup(
-					'type',
-					deviceTypes,
-					device.type,
-					{
+					+form_buttonGroup('type', deviceTypes, device.type, {
 						'data-validation': 'required'
-					}
-					)
+					})
 
 				+form_fieldset
 					+form_label('location', 'Location')
-					+form_buttonGroup(
-					'location',
-					[
+					+form_buttonGroup('location', [
 						{value: 'internal', label: 'Internal', fa_icon: 'sign-in'},
 						{value: 'external', label: 'External', fa_icon: 'sign-out'}
-					],
-					device.location,
-					{
+					], device.location, {
 						'data-validation': 'required'
-					}
-					)
+					})
 
 				+form_fieldset
 					+form_button('Save', 'save', {'class': 'btn-primary'})
