--- a/views/_shared/navigation.jade
+++ b/views/_shared/navigation.jade
@@ -14,9 +14,13 @@ div.portlet
 				span Devices
 
 			li: a(href = '/aliases', class = (_.activePage == 'aliases' ? 'active' : ''))
-				i.fa.fa-fw.fa-sitemap
+				i.fa.fa-fw.fa-link
 				span Aliases
 
 			li: a(href = '/bash-shortcuts', class = (_.activePage == 'bash-shortcuts' ? 'active' : ''))
-				i.fa.fa-fw.fa-terminal
+				i.fa.fa-fw.fa-share
 				span Bash Shortcuts
+
+			li: a(href = '/bash-functions', class = (_.activePage == 'bash-functions' ? 'active' : ''))
+				i.fa.fa-fw.fa-code
+				span Bash Functions
