--- a/views/dashboard/index.pug
+++ b/views/dashboard/index.pug
@@ -1,4 +1,4 @@
-extends ../_shared/root-layout
+extends ../_shared/root-layout.pug
 
 block head
 	link(rel='stylesheet', href='/dashboard/css/dashboard.css')
