--- a/views/devices/edit.pug
+++ b/views/devices/edit.pug
@@ -49,7 +49,7 @@ block page-body
 					})
 
 				+form_fieldset
-					+form_button('Save', 'save', {'class': 'btn-primary'})
+					+form_button('Save', 'save', {'class': 'btn-success'})
 
 block scripts
 	+plugin_validation
