--- a/views/_shared/navigation.pug
+++ b/views/_shared/navigation.pug
@@ -5,22 +5,28 @@ div.portlet
 
 	div.portlet-body
 		ul.navigation
-			li: a(href = '/', class = (_.activePage == 'dashboard' ? 'active' : ''))
-				i.fa.fa-fw.fa-tv
-				span Dashboard
+			if (locals.user)
+				li: a(href = '/', class = (_.activePage == 'dashboard' ? 'active' : ''))
+					i.fa.fa-fw.fa-tv
+					span Dashboard
 
-			li: a(href = '/devices', class = (_.activePage == 'devices' ? 'active' : ''))
-				i.fa.fa-fw.fa-server
-				span Devices
+				li: a(href = '/devices', class = (_.activePage == 'devices' ? 'active' : ''))
+					i.fa.fa-fw.fa-server
+					span Devices
 
-			li: a(href = '/aliases', class = (_.activePage == 'aliases' ? 'active' : ''))
-				i.fa.fa-fw.fa-link
-				span Aliases
+				li: a(href = '/aliases', class = (_.activePage == 'aliases' ? 'active' : ''))
+					i.fa.fa-fw.fa-link
+					span Aliases
 
-			li: a(href = '/bash-shortcuts', class = (_.activePage == 'bash-shortcuts' ? 'active' : ''))
-				i.fa.fa-fw.fa-share
-				span Bash Shortcuts
+				li: a(href = '/bash-shortcuts', class = (_.activePage == 'bash-shortcuts' ? 'active' : ''))
+					i.fa.fa-fw.fa-share
+					span Bash Shortcuts
 
-			li: a(href = '/bash-functions', class = (_.activePage == 'bash-functions' ? 'active' : ''))
-				i.fa.fa-fw.fa-code
-				span Bash Functions
+				li: a(href = '/bash-functions', class = (_.activePage == 'bash-functions' ? 'active' : ''))
+					i.fa.fa-fw.fa-code
+					span Bash Functions
+			else
+				li: a(href = '/auth/login', class = (_.activePage == 'auth' ? 'active' : ''))
+					i.fa.fa-fw.fa-key
+					span Login
+
