--- a/views/_shared/page-layout.pug
+++ b/views/_shared/page-layout.pug
@@ -8,6 +8,8 @@ block body
 
 	div#header
 		h1!= _.title
+		if (locals.user)
+			p.auth Logged in as #{locals.user.name} (#[a(href = '/auth/logout') logout])
 
 	div.container
 		div.row
