--- a/views/bash-shortcuts/edit.pug
+++ b/views/bash-shortcuts/edit.pug
@@ -43,7 +43,7 @@ block page-body
 					})
 
 				+form_fieldset
-					+form_button('Save', 'save', {'class': 'btn-primary'})
+					+form_button('Save', 'save', {'class': 'btn-success'})
 
 block scripts
 	script(src = '/_shared/js/forms.js')
