--- a/views/aliases/edit.pug
+++ b/views/aliases/edit.pug
@@ -17,7 +17,7 @@ block page-body
 
 		div.portlet-body
 
-			form(action = '/aliases/edit/' + device._id, method = 'post')
+			form(action = '/aliases/edit/' + device.id, method = 'post')
 
 				div.row
 
@@ -34,7 +34,7 @@ block page-body
 
 							for d in outboundDevices
 								+form_fieldset
-									+form_switchCheckBox('out_' + d._id, device.hostname + arr + d.hostname, {checked: aliasMap[device._id][d._id]})
+									+form_switchCheckBox('out_' + d.id, device.hostname + arr + d.hostname, {checked: aliasMap[device.id][d.id]})
 
 					div.col-md-6
 						h2 Inbound Aliases
@@ -49,7 +49,7 @@ block page-body
 
 							for d in inboundDevices
 								+form_fieldset
-									+form_switchCheckBox('in_' + d._id, d.hostname + arr + device.hostname, {checked: aliasMap[d._id][device._id]})
+									+form_switchCheckBox('in_' + d.id, d.hostname + arr + device.hostname, {checked: aliasMap[d.id][device.id]})
 
 				+form_fieldset
 					+form_button('Save', 'save', {'class': 'btn-success'})
