--- a/views/aliases/index.pug
+++ b/views/aliases/index.pug
@@ -12,7 +12,7 @@ mixin device(d)
 			br
 			span #{d.inboundAliases} inbound alias#{d.inboundAliases == 1 ? '' : 'es'}
 			p.buttons.btn-group
-				+form_buttonLink('Manage Aliases', 'edit', '/aliases/edit/' + d._id, {
+				+form_buttonLink('Manage Aliases', 'edit', '/aliases/edit/' + d.id, {
 					'class': 'btn-warning'
 				})
 
