--- a/views/devices/edit.pug
+++ b/views/devices/edit.pug
@@ -17,7 +17,7 @@ block page-body
 
 		div.portlet-body
 
-			form(action = '/devices/edit/' + (device._id || 0), method = 'post')
+			form(action = '/devices/edit/' + (device.id || 0), method = 'post')
 
 				+form_fieldset
 					+form_label('hostname', 'Hostname')
