Set up user register action and view

--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -23,4 +23,8 @@ block page-body
 					+form_passwordInput('password')
 
 				+form_fieldset
+					+form_label('confirmPassword', 'Confirm Password')
+					+form_passwordInput('confirmPassword')
+
+				+form_fieldset
 					+form_button('Register', 'key', {'class': 'btn-success'})
