--- a/views/_shared/navigation.pug
+++ b/views/_shared/navigation.pug
@@ -30,6 +30,6 @@ div.portlet
 					i.fa.fa-fw.fa-key
 					span Login
 
-				li: a(href = '/auth/login', class = (_.activePage == 'register' ? 'active' : ''))
+				li: a(href = '/users/register', class = (_.activePage == 'register' ? 'active' : ''))
 					i.fa.fa-fw.fa-key
 					span Register
