--- a/views/_shared/navigation.pug
+++ b/views/_shared/navigation.pug
@@ -27,9 +27,9 @@ div.portlet
 					span Bash Functions
 			else
 				li: a(href = '/auth/login', class = (_.activePage == 'auth' ? 'active' : ''))
-					i.fa.fa-fw.fa-key
+					i.fa.fa-fw.fa-user
 					span Login
 
 				li: a(href = '/users/register', class = (_.activePage == 'register' ? 'active' : ''))
-					i.fa.fa-fw.fa-key
+					i.fa.fa-fw.fa-user-plus
 					span Register
