--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -27,4 +27,4 @@ block page-body
 					+form_passwordInput('confirmPassword')
 
 				+form_fieldset
-					+form_button('Register', 'key', {'class': 'btn-success'})
+					+form_button('Register', 'fa-user-plus', {'class': 'btn-success'})
