--- a/views/dashboard/index.pug
+++ b/views/dashboard/index.pug
@@ -22,6 +22,6 @@ block body
 
 				div.portlet-body
 					if (locals.user)
-						p Logged in as #{locals.user.name}.
+						p Logged in as #{locals.user.email}.
 					else
 						p.none You're not logged in!
