Fix register button

--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -44,4 +44,4 @@ block page-body
 						+form_error('Please make sure the passwords match.')
 
 				+form_fieldset
-					+form_button('Register', 'fa-user-plus', {'class': 'btn-success'})
+					+form_button('Register', 'user-plus', {'class': 'btn-success'})
